pywrapper/src/pyciaaw/ciaaw_saw.h

struct ciaaw_saw_element_t{
    char element[25];
    char symbol[9];
    int z;
    double saw_min;
    double saw_max;
    double saw;
    double saw_u;
    double asaw;
    double asaw_u;
};
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Pm;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Sm;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Eu;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Gd;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Tb;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Dy;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ho;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Er;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Tm;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Yb;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Lu;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Hf;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ta;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_W;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Re;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Os;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ir;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Pt;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Au;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Hg;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Tl;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Pb;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Bi;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Po;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_At;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Rn;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Fr;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ra;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ac;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Th;