src/capi_saw_2021.f90


type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Pm") ::&
capi_60 = capi_saw_type(&
["p","r","o","m","e","t","h","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","m",c_null_char," "," "," "," "," "," "], &
Pm%z, &
Pm%saw_min, &
Pm%saw_max, &
Pm%saw, &
Pm%saw_u, &
Pm%asaw, &
Pm%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Sm") ::&
capi_61 = capi_saw_type(&
["s","a","m","a","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","m",c_null_char," "," "," "," "," "," "], &
Sm%z, &
Sm%saw_min, &
Sm%saw_max, &
Sm%saw, &
Sm%saw_u, &
Sm%asaw, &
Sm%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Eu") ::&
capi_62 = capi_saw_type(&
["e","u","r","o","p","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["E","u",c_null_char," "," "," "," "," "," "], &
Eu%z, &
Eu%saw_min, &
Eu%saw_max, &
Eu%saw, &
Eu%saw_u, &
Eu%asaw, &
Eu%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Gd") ::&
capi_63 = capi_saw_type(&
["g","a","d","o","l","i","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["G","d",c_null_char," "," "," "," "," "," "], &
Gd%z, &
Gd%saw_min, &
Gd%saw_max, &
Gd%saw, &
Gd%saw_u, &
Gd%asaw, &
Gd%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Tb") ::&
capi_64 = capi_saw_type(&
["t","e","r","b","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","b",c_null_char," "," "," "," "," "," "], &
Tb%z, &
Tb%saw_min, &
Tb%saw_max, &
Tb%saw, &
Tb%saw_u, &
Tb%asaw, &
Tb%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Dy") ::&
capi_65 = capi_saw_type(&
["d","y","s","p","r","o","s","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["D","y",c_null_char," "," "," "," "," "," "], &
Dy%z, &
Dy%saw_min, &
Dy%saw_max, &
Dy%saw, &
Dy%saw_u, &
Dy%asaw, &
Dy%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ho") ::&
capi_66 = capi_saw_type(&
["h","o","l","m","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","o",c_null_char," "," "," "," "," "," "], &
Ho%z, &
Ho%saw_min, &
Ho%saw_max, &
Ho%saw, &
Ho%saw_u, &
Ho%asaw, &
Ho%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Er") ::&
capi_67 = capi_saw_type(&
["e","r","b","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["E","r",c_null_char," "," "," "," "," "," "], &
Er%z, &
Er%saw_min, &
Er%saw_max, &
Er%saw, &
Er%saw_u, &
Er%asaw, &
Er%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Tm") ::&
capi_68 = capi_saw_type(&
["t","h","u","l","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","m",c_null_char," "," "," "," "," "," "], &
Tm%z, &
Tm%saw_min, &
Tm%saw_max, &
Tm%saw, &
Tm%saw_u, &
Tm%asaw, &
Tm%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Yb") ::&
capi_69 = capi_saw_type(&
["y","t","t","e","r","b","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Y","b",c_null_char," "," "," "," "," "," "], &
Yb%z, &
Yb%saw_min, &
Yb%saw_max, &
Yb%saw, &
Yb%saw_u, &
Yb%asaw, &
Yb%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Lu") ::&
capi_70 = capi_saw_type(&
["l","u","t","e","t","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","u",c_null_char," "," "," "," "," "," "], &
Lu%z, &
Lu%saw_min, &
Lu%saw_max, &
Lu%saw, &
Lu%saw_u, &
Lu%asaw, &
Lu%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Hf") ::&
capi_71 = capi_saw_type(&
["h","a","f","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","f",c_null_char," "," "," "," "," "," "], &
Hf%z, &
Hf%saw_min, &
Hf%saw_max, &
Hf%saw, &
Hf%saw_u, &
Hf%asaw, &
Hf%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ta") ::&
capi_72 = capi_saw_type(&
["t","a","n","t","a","l","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","a",c_null_char," "," "," "," "," "," "], &
Ta%z, &
Ta%saw_min, &
Ta%saw_max, &
Ta%saw, &
Ta%saw_u, &
Ta%asaw, &
Ta%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_W") ::&
capi_73 = capi_saw_type(&
["t","u","n","g","s","t","e","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["W",c_null_char," "," "," "," "," "," "," "], &
W%z, &
W%saw_min, &
W%saw_max, &
W%saw, &
W%saw_u, &
W%asaw, &
W%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Re") ::&
capi_74 = capi_saw_type(&
["r","h","e","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","e",c_null_char," "," "," "," "," "," "], &
Re%z, &
Re%saw_min, &
Re%saw_max, &
Re%saw, &
Re%saw_u, &
Re%asaw, &
Re%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Os") ::&
capi_75 = capi_saw_type(&
["o","s","m","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["O","s",c_null_char," "," "," "," "," "," "], &
Os%z, &
Os%saw_min, &
Os%saw_max, &
Os%saw, &
Os%saw_u, &
Os%asaw, &
Os%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ir") ::&
capi_76 = capi_saw_type(&
["i","r","i","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["I","r",c_null_char," "," "," "," "," "," "], &
Ir%z, &
Ir%saw_min, &
Ir%saw_max, &
Ir%saw, &
Ir%saw_u, &
Ir%asaw, &
Ir%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Pt") ::&
capi_77 = capi_saw_type(&
["p","l","a","t","i","n","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","t",c_null_char," "," "," "," "," "," "], &
Pt%z, &
Pt%saw_min, &
Pt%saw_max, &
Pt%saw, &
Pt%saw_u, &
Pt%asaw, &
Pt%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Au") ::&
capi_78 = capi_saw_type(&
["g","o","l","d",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","u",c_null_char," "," "," "," "," "," "], &
Au%z, &
Au%saw_min, &
Au%saw_max, &
Au%saw, &
Au%saw_u, &
Au%asaw, &
Au%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Hg") ::&
capi_79 = capi_saw_type(&
["m","e","r","c","u","r","y",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","g",c_null_char," "," "," "," "," "," "], &
Hg%z, &
Hg%saw_min, &
Hg%saw_max, &
Hg%saw, &
Hg%saw_u, &
Hg%asaw, &
Hg%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Tl") ::&
capi_80 = capi_saw_type(&
["t","h","a","l","l","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","l",c_null_char," "," "," "," "," "," "], &
Tl%z, &
Tl%saw_min, &
Tl%saw_max, &
Tl%saw, &
Tl%saw_u, &
Tl%asaw, &
Tl%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Pb") ::&
capi_81 = capi_saw_type(&
["l","e","a","d",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","b",c_null_char," "," "," "," "," "," "], &
Pb%z, &
Pb%saw_min, &
Pb%saw_max, &
Pb%saw, &
Pb%saw_u, &
Pb%asaw, &
Pb%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Bi") ::&
capi_82 = capi_saw_type(&
["b","i","s","m","u","t","h",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","i",c_null_char," "," "," "," "," "," "], &
Bi%z, &
Bi%saw_min, &
Bi%saw_max, &
Bi%saw, &
Bi%saw_u, &
Bi%asaw, &
Bi%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Po") ::&
capi_83 = capi_saw_type(&
["p","o","l","o","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","o",c_null_char," "," "," "," "," "," "], &
Po%z, &
Po%saw_min, &
Po%saw_max, &
Po%saw, &
Po%saw_u, &
Po%asaw, &
Po%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_At") ::&
capi_84 = capi_saw_type(&
["a","s","t","a","t","i","n","e",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","t",c_null_char," "," "," "," "," "," "], &
At%z, &
At%saw_min, &
At%saw_max, &
At%saw, &
At%saw_u, &
At%asaw, &
At%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Rn") ::&
capi_85 = capi_saw_type(&
["r","a","d","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","n",c_null_char," "," "," "," "," "," "], &
Rn%z, &
Rn%saw_min, &
Rn%saw_max, &
Rn%saw, &
Rn%saw_u, &
Rn%asaw, &
Rn%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Fr") ::&
capi_86 = capi_saw_type(&
["f","r","a","n","c","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","r",c_null_char," "," "," "," "," "," "], &
Fr%z, &
Fr%saw_min, &
Fr%saw_max, &
Fr%saw, &
Fr%saw_u, &
Fr%asaw, &
Fr%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ra") ::&
capi_87 = capi_saw_type(&
["r","a","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","a",c_null_char," "," "," "," "," "," "], &
Ra%z, &
Ra%saw_min, &
Ra%saw_max, &
Ra%saw, &
Ra%saw_u, &
Ra%asaw, &
Ra%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ac") ::&
capi_88 = capi_saw_type(&
["a","c","t","i","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","c",c_null_char," "," "," "," "," "," "], &
Ac%z, &
Ac%saw_min, &
Ac%saw_max, &
Ac%saw, &
Ac%saw_u, &
Ac%asaw, &
Ac%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Th") ::&
capi_89 = capi_saw_type(&
["t","h","o","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","h",c_null_char," "," "," "," "," "," "], &
Th%z, &
Th%saw_min, &
Th%saw_max, &
Th%saw, &
Th%saw_u, &
Th%asaw, &
Th%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])
